Add backend unit tests, email verification view, add error handling in backend, change some frontend styles and other fixes